@@ -1178,7 +1178,7 @@ replace restart {
 } by {
 	; common peephole 85a eliminated jump.
 %1:
-} if labelRefCountChange(%1 -1)
+} if labelRefCountChange(%1 -1), notInJumpTable
 
 replace restart {
 	jp	%1
@@ -1188,7 +1188,7 @@ replace restart {
 	; common peephole 85b eliminated jump.
 %2:
 %1:
-} if labelRefCountChange(%1 -1)
+} if labelRefCountChange(%1 -1), notInJumpTable
 
 // A peephole that makes the code longer. Let's hope it's worth it in speed gain and further optimization potential.
 replace restart {
